# metatrain

./: .codecov.yml  .gitignore  .readthedocs.yml  CITATION.cff  CODEOWNERS  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  create_new_architecture.py  dump_to_disk.py  file  fooo.yaml  index.html  llpr.ipynb  pet-mods.txt  pyproject.toml  readthedocs.yml  run_mtt.sh  setup.py  test.ipynb  tox.ini
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-documentation_issue.yml  3-feature_request.yml  4-blank_issue.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_new-architecture.md  pull_request_new-model.md  pull_request_template.md
.github/workflows/: alchemical-model-test.yml  alchemical-model-tests.yml  architecture-tests.yml  build.yml  deploy.yml  docs.yml  gap-tests.yml  lint.yml  merge-tests.yml  pet-jax.yml  pet-tests.yml  pr-docs-preview.yml  release.yml  soap-bpnn-tests.yml  sparse-gap-tests.yml  tests.yml
ci/: cscs.yml  pipeline.yml
ci/containers/: Containerfile  Containerfile.base  Containerfile.mtt  nvidia-pytorch.Containerfile
ci/pipelines/: gh200-distributed.yml  gh200.yml
ci/scripts/: install-mtt.sh
developer/: clean-tempfiles.sh  jsonfix.py
dfu/: options-llpr.yaml  options-pet.yaml  training.ipynb
docs/: .gitignore  requirements.txt
docs/generate_examples/: conf.py
docs/src/: cite.rst  conf.py  dev-docs.rst  faq.rst  gallery.py  how-to.rst  index.rst  models.rst  quickstart.rst
docs/static/: exported_model_ethanol.pt  options.yaml  options_ethanol.yaml  parameters.yaml  refs.bib  styles.css
examples/: GALLERY_HEADER.rst  README.rst  eval.sh  options.yaml  output.xyz  parameters.yaml  qm9_reduced_100.xyz  train.sh  usage.sh
examples/0-beginner/: .gitignore  00-basic-usage.sh  01-data_preparation.py  02-fine-tuning.py  03-train_from_scratch.py  04-parity_plot.py  05-run_ase.py  GALLERY_HEADER.rst  carbon_reduced_100.xyz  eval-basic.yaml  options-basic.yaml  options-ft-eval.yaml  options-ft.yaml  options-memmap.yaml  options-pet-preset.yaml  options-scratch.yaml  run_dpa3.sh
examples/1-advanced/: .gitignore  00-transfer-learning.py  01-llpr.py  02-zbl.py  03-fitting-generic-targets.py  04-flashmd.py  05-multi-gpu.py  06-mixed-stress-training.py  07-dos-training.py  08-classifier.py  08-llpr-ensemble-training.py  09-classifier.py  09-symplectic-flashmd.py  09-training-with-batch-bounds.py  10-pet-hidden-features.py  DOS_structures.xyz  GALLERY_HEADER.rst  carbon_allotropes.xyz  flashmd.xyz  mixed_structures.xyz  options-classifier.yaml  options-distributed-soap.yaml  options-dos.yaml  options-e-pet-pet-omat-xs32.yaml  options-flashmd-finetune.yaml  options-flashmd-symplectic.yaml  options-flashmd.yaml  options-llpr-ensemble-full.yaml  options-llpr-ensemble-train.yaml  options-llpr-ensemble-training.yaml  options-llpr-ensemble.yaml  options-llpr.yaml  options-mixed-stress.yaml  options-no-llpr.yaml  options-no-zbl.yaml  options_zbl.yaml
examples/alchemical_model/: README.rst  alchemical_reduced_10.xyz  eval.yaml  hea_samples_bulk.xyz  options.yaml  usage.sh
examples/ase/: README.rst  ethanol_reduced_100.xyz  exported-model.pt  exported_model_ethanol.pt  (+6 more)
latest/: .buildinfo  cite.html  faq.html  genindex.html  index.html  installation.html  mtt_README.html  mtt_train_schema.json  objects.inv  py-modindex.html  robots.txt  search.html  searchindex.js  sitemap.xml
scripts/: hotfix_metatensor.py  setup.py
test_long_range/: batched.py  filter.py  options.yaml  small.py  small.xyz
tests/: cli.py  conftest.py  data.py  init.py  no_test_pet_speed.py  test_example.py  test_flashmd.py  test_init.py  test_kernel.py  test_linear.py  test_nn.py  test_readme.py  test_registered_archs.py
v2025.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v2025.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v2025.10/: .buildinfo  cite.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v2025.11/: .buildinfo  cite.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
v2025.12/: .buildinfo  cite.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
v2025.2/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v2025.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v2025.4/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v2025.5/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v2025.6/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v2025.7/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v2025.8/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v2025.8.1/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v2025.9/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v2025.9.1/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v2026.1/: .buildinfo  cite.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
v2026.2/: cite.html  faq.html  genindex.html  index.html  installation.html  mtt_README.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
v2026.2.1/: cite.html  faq.html  genindex.html  index.html  installation.html  mtt_README.html  py-modindex.html  search.html  searchindex.js
v2026.3.1/: .buildinfo  cite.html  faq.html  genindex.html  index.html  installation.html  mtt_README.html  objects.inv  py-modindex.html  robots.txt  search.html  searchindex.js  sitemap.xml
(+4675 files in other folders)
