[project]
name = "metatrain"
dynamic = ["version"]
requires-python = ">=3.9"

readme = "README.md"
license = "BSD-3-Clause"
description = "Training and evaluating machine learning models for atomistic systems."
authors = [{name = "metatrain developers"}]

# Strict version pinning to avoid regression test failing on new versions
dependencies = [
    "ase",
    "huggingface_hub",
    "metatensor-learn >=0.3.2,<0.4",
    "metatensor-operations >=0.3.4,<0.4",
    "metatensor-torch >=0.7.6,<0.8",
    "metatomic-torch >=0.1.2,<0.2",
    "jsonschema",
    "omegaconf >= 2.3.0",
    "python-hostlist",
    "tqdm",
    "vesin",
]

keywords = ["machine learning", "molecular modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://metatensor.github.io/metatrain"
documentation = "https://metatensor.github.io/metatrain"
repository = "https://github.com/metatensor/metatrain"
issues = "https://github.com/metatensor/metatrain/issues"
changelog = "https://metatensor.github.io/metatrain/latest/dev-docs/changelog.html"

[project.scripts]
mtt = "metatrain.__main__:main"

### ======================================================================== ###

[build-system]
requires = [
    "setuptools >= 77",
    "setuptools_scm>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
soap-bpnn = [
    "torch-spex>=0.1,<0.2",
    "wigners",
]
deprecated-pet = [
    "pet-neighbors-convert",
    "torch_geometric",
    "matscipy",
    "scikit-learn",
    "pathos",
    "scipy",
]
pet = []
nanopet = []
gap = [
    "featomic-torch >=0.7,<0.8",
    "skmatter",
    "scipy",
]
llpr = []

[tool.check-manifest]
ignore = ["src/metatrain/_version.py"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/metatrain/_version.py"

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
]
omit = [
    "*/site-packages/*",
    "*/metatrain/experimental/*",
    "*/metatrain/utils/testing/*"
]

[tool.coverage.paths]
source = [
    "src/metatrain",
    ".tox/*/lib/python*/site-packages/metatrain"
]

[tool.ruff]
exclude = ["docs/src/examples/**", "src/metatrain/_version.py"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B018", "B904"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["metatrain"]
known-third-party = ["torch"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
exclude = [
    "docs/src/examples"
]
follow_imports = 'skip'
ignore_missing_imports = true

[tool.pytest.ini_options]
# ignore" a bunch of internal warnings with Python 3.13 and PyTorch
filterwarnings = [
    "error",
    # PyTorch deprecation warnings
    "ignore:ast.Str is deprecated and will be removed in Python 3.14:DeprecationWarning",
    "ignore:Attribute s is deprecated and will be removed in Python 3.14:DeprecationWarning",
    "ignore:ast.NameConstant is deprecated and will be removed in Python 3.14:DeprecationWarning",
    # PyTorch does not want these, but mypy requires them
    "ignore:The TorchScript type system doesn't support instance-level annotations on empty non-base types",
    # Sphericart double backward warning
    "ignore:Second derivatives of the spherical harmonics with respect to the Cartesian coordinates were not requested at class creation.",
    # OldCompositionModel deprecation warning
    "ignore:`OldCompositionModel` composition model is deprecated. Please use `CompositionModel` instead.",
    # We don't yet have a linux-aarch64 wheel on PyPI, so libgomp is not copied to 
    # sphericart_torch.libs' by cibuildwheels
    "ignore:No libgomp shared library found in 'sphericart_torch.libs'.",
]

[tool.yamlfix]
line_length = 88
explicit_start = false
section_whitelines = 1
none_representation = "null"
